--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "nodejs-app",
-  "version": "1.0.0",
-  "description": "A minimal Node.js web application.",
-  "main": "app.js",
-  "author": "alphasec",
-  "license": "MIT",
+  "name": "courtlaw-retell-proxy",
+  "private": true,
+  "type": "module",
+  "engines": { "node": ">=18" },
   "dependencies": {
     "express": "^4.19.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   }
 }
+
